--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -14,6 +14,7 @@
         <th rowspan="2">Album</th>
         <th rowspan="2">Tracks</th>
         <th rowspan="2">Tracks matched</th>
+        <th rowspan="2">Files matched</th>
         <th rowspan="2">MBIDs matched</th>
         <th colspan="3">Track scores</th>
       </tr>
@@ -24,9 +25,10 @@
       </tr>
     [% FOREACH album IN albums %]
       <tr>
-        <td><a href="album.pl?alid=[% album.album_id %]">[% album.title %]</a></td>
+        <td><a href="album.pl?alid=[% album.album_id %]">[% album.album %]</a></td>
         <td>[% album.tracks %]</td>
         <td>[% album.tracks_matched %]</td>
+        <td>[% album.files_matched %]</td>
         <td>[% album.mbids_matched %]</td>
         <td style="background: #[% album.max_color %];">[% album.max_score %]</td>
         <td style="background: #[% album.min_color %];">[% album.min_score %]</td>
