--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -45,10 +45,8 @@
       [% END %]
     [% END %]
       </table>
-      <p>
-        <input type="submit" name="match_selected" value="Match selected files with tracks" />
-        <input type="submit" name="save_selected" value="Match and save selected files" />
-      </p>
+      <p><input type="checkbox" name="force_save" value="force_save" />Force saving selected files</p>
+      <p><input type="submit" name="match_selected" value="Match selected" /></p>
     </form>
   [% END %]
 [% END %]
