--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -39,7 +39,11 @@
           <td>[% track.file_duration %]</td>
         </tr>
         <tr>
+        [% IF track.matched %]
+          <td style="text-align: center;">OK</td>
+        [% ELSE %]
           <td style="text-align: center;"><input type="checkbox" name="match_file_track" value="[% track.file_id %]@[% track.track_id %]" /></td>
+        [% END %]
           <td colspan="6"><a href="file.pl?fiid=[% track.file_id %]">[% track.filename %]</a></td>
         </tr>
       [% END %]
