modified header.tmpl slightly
moved "album matching" to the left and made "artists", "albums",
"tracks" and "files" grouped together as "cache". people are not really
supposed to mock around in the cache, it's just there for "easy access".
we're going to need a new page "unmatched files". this page will show
files that haven't got an entry in the "match" table. it's highly likely
that these files got very poor metadata or that they don't exist in
musicbrainz

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -14,11 +14,11 @@
       <li><a href="settings.pl">Settings</a></li>
     </ul>
     <ul id="menu" class="list">
+      <li><a href="album_matching.pl">Album matching</a></li>
+      <li>Cache, that wai -&gt;</li>
       <li><a href="artists.pl">Artists</a></li>
       <li><a href="albums.pl">Albums</a></li>
       <li><a href="tracks.pl">Tracks</a></li>
-      <li>space?</li>
-      <li><a href="album_matching.pl">Album matching</a></li>
       <li><a href="files.pl">Files</a></li>
     </ul>
 
