--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -15,6 +15,7 @@
     </ul>
     <ul id="menu" class="list">
       <li><a href="album_matching.pl">Album matching</a></li>
+      <li><a href="uncompared_files.pl">Uncompared files</a></li>
       <li>Cache, that wai -&gt;</li>
       <li><a href="artists.pl">Artists</a></li>
       <li><a href="albums.pl">Albums</a></li>
