--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -16,6 +16,7 @@
         <th rowspan="2">Tracks matched</th>
         <th rowspan="2">Files matched</th>
         <th rowspan="2">MBIDs matched</th>
+        <th rowspan="2">Album score</th>
         <th colspan="3">Track scores</th>
       </tr>
       <tr>
@@ -30,6 +31,7 @@
         <td>[% album.tracks_matched %]</td>
         <td>[% album.files_matched %]</td>
         <td>[% album.mbids_matched %]</td>
+        <td style="background: #[% album.album_color %];">[% album.album_score %]</td>
         <td style="background: #[% album.max_color %];">[% album.max_score %]</td>
         <td style="background: #[% album.min_color %];">[% album.min_score %]</td>
         <td style="background: #[% album.avg_color %];">[% album.avg_score %]</td>
