--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -17,7 +17,7 @@
         <th rowspan="2">Files matched</th>
         <th rowspan="2">MBIDs matched</th>
         <th rowspan="2">Album score</th>
-        <th colspan="3">Track scores</th>
+        <th colspan="3">File scores</th>
       </tr>
       <tr>
         <th>Max</th>
