added "files_compared" to album_matching view
actually, i renamed "files_matched" to "files_compared" and added
"files_matched". "files_compared" now show files that's been compared to
a track (including files that's been matched), "files_matched" shows
only files that's been matched

--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -16,7 +16,7 @@
         <th rowspan="2">Tracks matched</th>
         <th rowspan="2">Files matched</th>
         <th rowspan="2">MBIDs matched</th>
-        <th rowspan="2">Album score</th>
+        <th rowspan="2">Files compared</th>
         <th colspan="3">File scores</th>
       </tr>
       <tr>
@@ -31,7 +31,7 @@
         <td>[% album.tracks_matched %]</td>
         <td>[% album.files_matched %]</td>
         <td>[% album.mbids_matched %]</td>
-        <td style="background: #[% album.album_color %];">[% album.album_score %]</td>
+        <td>[% album.files_compared %]</td>
         <td style="background: #[% album.max_color %];">[% album.max_score %]</td>
         <td style="background: #[% album.min_color %];">[% album.min_score %]</td>
         <td style="background: #[% album.avg_color %];">[% album.avg_score %]</td>
