fixed bugs in album_matching and album views
"score" column in album_matching view was empty.
files already matched to a track on another album than the album viewed
were listed (which they shouldn't)

--- a/templates/album_matching.tmpl
+++ b/templates/album_matching.tmpl
@@ -21,7 +21,7 @@
         <td><a href="album.pl?alid=[% album.album_id %]">[% album.album %]</a></td>
         <td>[% album.tracks %]</td>
         <td>[% album.mbid_matches %]</td>
-        <td>[% album.sum_score %]</td>
+        <td>[% album.score %]</td>
       </tr>
   [% END %]
     </table>
