fixed web stuff after the huge terminology rewrite
hope i got most of the pages working again. also renamed "Album
matching" to just "Matching" and "Uncompared files" to "Uncompared".
"Matching" page now got some nice colors for best/worst/average track
comparison

--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -40,7 +40,7 @@
       [% END %]
       [% IF track.file_id %]
         <tr>
-          <td style="background: #[% track.color %];">[% track.meta_score %]</td>
+          <td style="background: #[% track.color %];">[% track.score %]</td>
         [% IF track.matched %]
           <td style="text-align: center;">OK</td>
         [% ELSE %]
