--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -14,8 +14,8 @@
       <li><a href="settings.pl">Settings</a></li>
     </ul>
     <ul id="menu" class="list">
-      <li><a href="album_matching.pl">Album matching</a></li>
-      <li><a href="uncompared_files.pl">Uncompared files</a></li>
+      <li><a href="matching.pl">Matching</a></li>
+      <li><a href="uncompared.pl">Uncompared</a></li>
       <li>Cache, that wai -&gt;</li>
       <li><a href="artists.pl">Artists</a></li>
       <li><a href="albums.pl">Albums</a></li>
