--- a/templates/track.tmpl
+++ b/templates/track.tmpl
@@ -22,7 +22,7 @@
       </tr>
     [% FOREACH match IN matches %]
       <tr>
-        <td rowspan="2" style="background: #[% match.color %];">[% match.meta_score %]</td>
+        <td rowspan="2" style="background: #[% match.color %];">[% match.score %]</td>
         <td>[% match.tracknumber %]</td>
         <td>[% match.albumartist %]</td>
         <td>[% match.album %]</td>
