--- a/templates/matching.tmpl
+++ b/templates/matching.tmpl
@@ -13,22 +13,26 @@
       <tr>
         <th rowspan="2">Album</th>
         <th rowspan="2">Tracks</th>
-        <th rowspan="2">MBID matches</th>
-        <th colspan="3">Track scores</th>
+        <th rowspan="2">Tracks compared</th>
+        <th rowspan="2">Files compared</th>
+        <th rowspan="2">MBIDs matched</th>
+        <th colspan="3">Scores</th>
       </tr>
       <tr>
         <th>Max</th>
-        <th>Average</th>
+        <th>Avg</th>
         <th>Min</th>
       </tr>
     [% FOREACH album IN albums %]
       <tr>
         <td><a href="album.pl?alid=[% album.album_id %]">[% album.album %]</a></td>
         <td>[% album.tracks %]</td>
-        <td>[% album.mbid_matches %]</td>
-        <td style="background: #[% album.max_track_color %];">[% album.max_track_score %]</td>
-        <td style="background: #[% album.avg_track_color %];">[% album.avg_track_score %]</td>
-        <td style="background: #[% album.min_track_color %];">[% album.min_track_score %]</td>
+        <td>[% album.tracks_compared %]</td>
+        <td>[% album.files_compared %]</td>
+        <td>[% album.mbids_matched %]</td>
+        <td style="background: #[% album.max_color %];">[% album.max_score %]</td>
+        <td style="background: #[% album.avg_color %];">[% album.avg_score %]</td>
+        <td style="background: #[% album.min_color %];">[% album.min_score %]</td>
       </tr>
   [% END %]
     </table>
