improved album view too
and changed "filename" back to "varchar". not surprisingly it's a bit
more work than just changing it to bytea, and well, fix your bloody
filenames instead of expecting me to add dirty hacks for your broken
archive ;)

--- a/templates/album.tmpl
+++ b/templates/album.tmpl
@@ -49,7 +49,7 @@
       [% IF track.file_id %]
         <tr>
           <td style="background: #[% track.color %];">[% track.score %]</td>
-        [% IF track.track_id == track.track_id %]
+        [% IF track.file_track_id == track.track_id %]
           <td style="text-align: center;">OK</td>
         [% ELSE %]
           <td style="text-align: center;"><input type="checkbox" name="match_file_track" value="[% track.file_id %]@[% track.track_id %]" /></td>
